removed unused num check

--- a/1.Breathe.md
+++ b/1.Breathe.md
@@ -1,7 +1,6 @@
 ---
 title: Breathe
 layout: "bitflipped_page.vto"
-num: 1
 ---
 a
 this is stupid
@@ -11,5 +10,8 @@ like. god
 --pester-begin-fa-da--
 da: aaa i hate this so much.
 fa: you dumbass.
-fuck you
+fa: fuck you
+fa: You little ragequit wah wah crybaby
+da: why are you so mean :(
+fa: I'm not mean, I'm honest
 pester--
