--- a/1.Breathe.md
+++ b/1.Breathe.md
@@ -14,4 +14,9 @@ fa: fuck you
 fa: You little ragequit wah wah crybaby
 da: why are you so mean :(
 fa: I'm not mean, I'm honest
+da: is that what people call it now
+fa: What do you know about people? 
+fa: All you do is lay rotting away in bed reading the adventures of other people.
+fa: And now that you have a chance to do something, you just want to cry and be scared.
+fa: Stop being so fucking dumb and GO for ONCE.
 pester--
