--- a/0.index.md
+++ b/0.index.md
@@ -2,6 +2,7 @@
 title: "Bitflipped" 
 layout: "bitflipped_index.vto"
 hidden: false
+blurb: This is the distillation of years of homestuck hyperfixation. I hope you'll enjoy.
 ---
 
 This is the distillation of years of homestuck hyperfixation. I hope you'll enjoy.
